# NG_2024_Tymur_Ptashchenko

./: .gitignore
Lecture 1/Lecture_1/: main.cpp
Lecture 1/Task_1/: CMakeLists.txt
Lecture 1/Task_2/: main.cpp
Lecture 1/Task_3/: main.cpp
Lecture 1/build-Lecture_1-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Lecture_1  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lecture 1/build-Task_2-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task_2  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lecture 1/build-Task_3-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task_3  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lecture 2 /Task_1/: main.cpp
Lecture 2 /Task_2/: main.cpp
Lecture 2 /Task_3/: main.cpp
Lecture 2 /Task_5/: main.cpp
Lecture 2 /Task_6/: main.cpp
Lecture 2 /build-Task_1-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task_1  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lecture 2 /build-Task_2-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task_2  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lecture 2 /build-Task_3-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task_3  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lecture 2 /build-Task_5-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  (+6 more)
build-Task_2-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task_2  build.ninja  cmake_install.cmake  qtcsettings.cmake
(+683 files in other folders)
